--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div class="header">
     <button onclick="playSound()"> Click Me </button>
-    <audio id="mySound" src="haha.mp3" style="display: none;"></audio>
+    <audio id="mySound" src="huling.mp3" style="display: none;"></audio>
 
     <h4> Images OF ICT201A </h4>
     <button onclick="window.location.href='pictures.html';"> Video </button> 
