--- a/pictures.html
+++ b/pictures.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Vintage Vibes</title>
 </head>
 <body>
     <!-- Video Background -->
@@ -18,32 +18,104 @@
         Your browser does not support the audio tag.
     </audio>
 
+    <!-- Vintage overlay elements -->
+    <div class="vintage-overlay"></div>
+    <div class="film-grain"></div>
+
     <script>
         // Play audio when user clicks anywhere on the page
         document.body.addEventListener('click', function() {
             const audio = document.getElementById('bgAudio');
             audio.muted = false;  // Unmute audio
             audio.play();         // Start playing audio
+            
+            // Add click effect for better UX
+            document.body.classList.add('audio-playing');
+        });
+
+        // Make video responsive to orientation changes
+        window.addEventListener('resize', function() {
+            const video = document.getElementById('bgVideo');
+            // Force video to recalculate its positioning
+            video.style.width = '100vw';
+            video.style.height = '100vh';
         });
     </script>
 </body>
 
 <style>
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        touch-action: manipulation;
+    }
+
     #bgVideo {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -1;
+        opacity: 0.7;
+        filter: grayscale(80%) sepia(30%) brightness(60%) contrast(110%) blur(0.5px);
+    }
+
+    /* Vintage overlay effects */
+    .vintage-overlay {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-        z-index: -1;
-        opacity: 0.6; /* gives that faded feel */
-        filter: grayscale(70%) brightness(60%) contrast(85%);
+        width: 100%;
+        height: 100%;
+        background: rgba(70, 45, 15, 0.15);
+        mix-blend-mode: multiply;
+        pointer-events: none;
+        z-index: 1;
     }
 
-    /* Hide the audio player UI */
+    .film-grain {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="4" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noise)" opacity="0.15"/></svg>');
+        pointer-events: none;
+        z-index: 2;
+    }
+
     #bgAudio {
         display: none;
+    }
+
+    body.audio-playing::after {
+        content: '♪';
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        color: white;
+        font-size: 24px;
+        opacity: 0.7;
+        z-index: 3;
+    }
+
+    @media screen and (orientation: portrait) {
+        #bgVideo {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    @media screen and (orientation: landscape) {
+        #bgVideo {
+            width: auto;
+            height: 100%;
+        }
     }
 </style>
 </html>
