--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button onclick="playSound()"> Click Me </button>
     <audio id="mySound" src="huling.mp3" style="display: none;"></audio>
 
-    <h4> Images OF ICT201A </h4>
+    <h4> ICT201A </h4>
     <button onclick="window.location.href='pictures.html';"> Video </button> 
    </div>
    
