--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="header">
-    <button onclick="playSound()"> Click Me </button>
+    <button onclick="playSound()"> 🎵 </button>
     <audio id="mySound" src="huling.mp3" style="display: none;"></audio>
 
     <h4> ICT201A </h4>
